--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo-wrapper">
-                <div class="logo">VSP</div>
-                <span class="logo-subtext">TMT REBAR - FE 550+</span>
-            </div>
+            <a href="#home" class="logo-wrapper">
+                <div class="brand-logo-top">
+                    <span class="brand-logo-vsp">VSP</span>
+                    <span class="brand-logo-tm">TM</span>
+                </div>
+                <div class="brand-logo-bottom">
+                    TMT REBAR - FE 550+
+                </div>
+            </a>
             <nav class="nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
